<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/button_menu_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:padding="4dp"
        android:src="@drawable/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/appCompatImageButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/appicon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_menu_close" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatImageButton">

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/share_app"
             android:drawableTint="@color/colorPrimary"

             android:layout_marginTop="10sp"
             android:id="@+id/button_menu_shareapp"
             android:textSize="17sp"
            android:paddingVertical="10sp"
            android:paddingHorizontal="10sp"
            android:drawablePadding="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="start|center_vertical"
            app:drawableStartCompat="@drawable/menu_icon_shareapp" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rate_us"
             android:id="@+id/button_menu_rateus"
             android:textSize="17sp"
             android:layout_marginTop="10sp"
             android:paddingVertical="10sp"
             android:drawableTint="@color/colorPrimary"

             android:paddingHorizontal="10sp"
            android:drawablePadding="16dp"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="start|center_vertical"
            app:drawableStartCompat="@drawable/menu_icon_rateus" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            android:textSize="17sp"
             android:id="@+id/button_menu_privacy"
             android:paddingVertical="10sp"
            android:paddingHorizontal="10sp"
            android:drawablePadding="19dp"
            android:textColor="@color/black"
             android:layout_marginTop="10sp"
             android:fontFamily="@font/quicksand_bold"
             android:drawableTint="@color/colorPrimary"
            android:gravity="start|center_vertical"
            app:drawableStartCompat="@drawable/menu_icon_privacypolicy" />

         <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/remove_ads"
            android:textSize="17sp"
             android:id="@+id/button_menu_removeads"
             android:layout_marginTop="10sp"
             android:paddingVertical="10sp"
             android:drawableTint="@color/colorPrimary"
             android:visibility="visible"
            android:paddingHorizontal="10sp"
             app:drawableStartCompat="@drawable/premium_icon_all"
            android:drawablePadding="14sp"
            android:textColor="@color/black"
            android:fontFamily="@font/quicksand_bold"
            android:gravity="start|center_vertical" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.constraintlayout.widget.ConstraintLayout>