<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">


        <ImageView
            android:layout_width="match_parent"
            android:layout_gravity="center"
            android:src="@drawable/intro_ill_2"
            android:layout_weight="1"
            android:layout_height="0dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:gravity="center_horizontal"
            android:layout_marginHorizontal="16dp"
            android:textColor="@color/colorPrimary"
            android:text="@string/onboarding_title_2"
            android:textSize="20sp"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:textColor="@color/black"
            android:lineSpacingExtra="1.5sp"
            android:text="@string/onboarding_desc_2"
            android:textSize="14sp" />
        <LinearLayout
            android:id="@+id/idllSKipNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:gravity="center_vertical"
            android:paddingEnd="16dp"
            android:paddingBottom="10dp"
            android:visibility="visible">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:src="@drawable/dot2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/btn_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/nextbtnround" />

        </LinearLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/framelayoutnative"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:orientation="vertical"
            android:visibility="visible">
            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animationView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"
                app:lottie_rawRes="@raw/lottieswipe"
                app:lottie_speed="1"
                app:lottie_url="REPLACE_JSON_URL" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:gravity="center_horizontal"
                android:layout_marginBottom="16dp"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:lineSpacingExtra="1.5sp"
                android:text="@string/swipe_to_move_next_screen"
                android:textSize="13sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>


</RelativeLayout>

