<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="25sp"
    android:backgroundTint="#FBFAF2"
    app:behavior_hideable="false"
    app:behavior_peekHeight="65dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/view2"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="16dp"
            android:background="#CACACA"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/bottomsheet_saveaddress_pin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:paddingVertical="10sp"
                android:scaleType="fitCenter"
                android:src="@drawable/bottomsheet_icon_pin"
                android:textColor="#7E7D7D"
                android:textSize="11sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/bottomsheet_saveaddress_copy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:paddingVertical="10sp"
                android:scaleType="fitCenter"
                android:src="@drawable/bottomsheet_icon_copy"
                android:textColor="#7E7D7D"
                android:textSize="11sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/bottomsheet_saveaddress_navigate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:paddingVertical="10sp"
                android:scaleType="fitCenter"
                android:src="@drawable/bottomsheet_icon_navigation"
                android:textColor="#7E7D7D"
                android:textSize="11sp" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/bottomsheet_saveaddress_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="12dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:padding="4dp"
                android:paddingVertical="10sp"
                android:scaleType="fitCenter"
                android:src="@drawable/bottomsheet_icon_share"
                android:textColor="#7E7D7D"
                android:textSize="11sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutCompat3">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/pin"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/copy"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/navigate"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/share"
                android:textColor="@color/black"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>